//Class that only deals with strings
public static class Tags 
{
    //Buttons Pressed
    public static string BUTTON_FIRE = "Fire1";
    public static string MOUS_SCROLL_WHEEL = "Mouse ScrollWheel";

    //Animator States
    public static string ANIM_WALK = "IsWalking";
    public static string ANIM_ATTACK = "isAttacking";
    public static string ANIM_DYING = "isDying";
    public static string ANIM_IDLE = "DS_onehand_idle_A";

    //Gamobject Names
    public static string OBJ_PLAYER_NAME = "Player";

    //Method Names
    public static string METHOD_DAMAGETAKEN = "DamageTakenWhileStationary";

    //Tags
    public static string TAGS_ENEMY = "Enemy";
}
